--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
           flex-direction: column;
         }
 
-        /* This is a comment */
+        /* This is a comment on feature1*/
 
       }
     </style>
